# rem

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  ccheck.yml
debian/: changelog  control  docs  librem-dev.files  librem.files  rules
docs/: ChangeLog  README
include/: rem.h  rem_aac.h  rem_au.h  rem_aubuf.h  rem_audio.h  rem_aufile.h  rem_auframe.h  rem_aulevel.h  rem_aumix.h  rem_auresamp.h  rem_autone.h  rem_avc.h  rem_dsp.h  rem_fir.h  rem_flv.h  rem_g711.h  rem_h264.h  rem_h265.h  rem_orc.h  rem_types.h  rem_vid.h  rem_vidconv.h  rem_video.h  rem_vidmix.h
mk/: Doxyfile
mk/symbian/: bld.inf  rem.mmp
mk/win32/: rem.vcproj  rem.vcxproj  rem.vcxproj.filters
orc/: rem.orc
rpm/: rem.spec
src/aac/: aac.c
src/au/: aubuf.c  aumix.c  autone.c  fmt.c  mod.mk  resamp.c
src/aubuf/: aubuf.c  mod.mk
src/auconv/: auconv.c
src/aufile/: aufile.c  wave.c
src/auframe/: auframe.c
src/aulevel/: aulevel.c
src/aumix/: aumix.c  mod.mk
src/auresamp/: fir.c  fir.h  mod.mk  resamp.c
src/autone/: autone.c  mod.mk  tone.c
src/avc/: conf.c  mod.mk
src/fir/: fir.c
src/flv/: flv.c  mod.mk
src/h264/: h264.c  mod.mk  nal.c  sps.c
src/h265/: nal.c
src/orc/: mod.mk  orc.c
src/vid/: draw.c  fmt.c  frame.c  mod.mk  vconv.c  vidmix.c  vutil.c
src/vidconv/: mod.mk  pack2yuv.c  sws.c  vconv.c  vconv.h  yuv2pack.c
src/vidmix/: mod.mk  vidmix.c
util/: genfir.py
